# simple-particle-system-opengl

./: .gitignore  .~lock.lecture.odt#  CMakeLists.txt  README.md  lecture.odt  readme.md
common/: camera.cpp  camera.h  util.cpp  util.h
lab08/: FountainEmitter.cpp  FountainEmitter.h  IntParticleEmitter.cpp  IntParticleEmitter.h  OrbitEmitter.cpp  OrbitEmitter.h  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEmitterInt.cpp  ParticleEmitterInt.h  ParticleShader.fragmentshader  ParticleShader.vertexshader  SimpleEmitter.cpp  SimpleEmitter.h  StandardShading.fragmentshader  StandardShading.vertexshader  imgui.ini  lab.cpp  lab08  model.cpp  model.h
